--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+      <link
+              rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
+      >
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="has-background-white">
+    <div id="app" class="has-background-white"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
